# untaped-profile

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/untaped_profile/: __init__.py  layout.py  plugin.py  root_option.py
src/untaped_profile/application/: __init__.py  create_profile.py  current_profile.py  delete_profile.py  list_profiles.py  ports.py  rename_profile.py  show_profile.py  use_profile.py
src/untaped_profile/cli/: __init__.py  commands.py
src/untaped_profile/domain/: __init__.py  models.py  resolver.py
src/untaped_profile/infrastructure/: __init__.py  profile_repo.py
src/untaped_profile/skills/untaped-profile/: SKILL.md
tests/unit/: conftest.py  test_cli.py  test_create_profile.py  test_current_profile.py  test_delete_profile.py  test_format_raw_first_key.py  test_layering.py  test_layout.py  test_list_profiles.py  test_plugin_entrypoint.py  test_profile_file_repo.py  test_rename_profile.py  test_resolver.py  test_root_option.py  test_show_profile.py  test_use_profile.py
